feat: 更新Clipboard Safe

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>剪贴板助手 - 智能剪贴板管理工具</title>
+    <title>Clipboard Safe - 智能剪贴板管理工具</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>📋 剪贴板助手</h1>
+                <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html" class="active">首页</a></li>
@@ -23,7 +23,7 @@
     <header class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1 class="hero-title">剪贴板助手</h1>
+                <h1 class="hero-title">Clipboard Safe</h1>
                 <p class="hero-subtitle">为 Mac 打造的智能剪贴板管理工具</p>
                 <p class="hero-description">让你的复制粘贴工作流更高效、更便捷</p>
                 <div class="hero-buttons">
@@ -90,7 +90,7 @@
             <h2 class="section-title">隐私第一</h2>
             <div class="privacy-content">
                 <p class="privacy-text">
-                    剪贴板助手从设计之初就将隐私放在首位。我们深知剪贴板内容的敏感性，
+                    Clipboard Safe从设计之初就将隐私放在首位。我们深知剪贴板内容的敏感性，
                     因此采取了多重措施确保你的数据安全：
                 </p>
                 <ul class="privacy-list">
@@ -107,7 +107,7 @@
     <section class="cta">
         <div class="container">
             <h2>准备好提升你的效率了吗？</h2>
-            <p>在 Mac App Store 下载剪贴板助手，开启高效工作之旅</p>
+            <p>在 Mac App Store 下载Clipboard Safe，开启高效工作之旅</p>
             <div class="cta-buttons">
                 <a href="support.html" class="btn btn-primary">获取技术支持</a>
                 <a href="privacy.html" class="btn btn-secondary">了解隐私政策</a>
@@ -123,7 +123,7 @@
                     <a href="support.html">技术支持</a>
                     <a href="privacy.html">隐私政策</a>
                 </div>
-                <p class="footer-copyright">© 2024 剪贴板助手. 保留所有权利.</p>
+                <p class="footer-copyright">© 2025 Clipboard Safe. 保留所有权利.</p>
             </div>
         </div>
     </footer>
