--- a/support.html
+++ b/support.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>技术支持 - 剪贴板助手</title>
+    <title>技术支持 - Clipboard Safe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>📋 剪贴板助手</h1>
+                <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">首页</a></li>
@@ -33,13 +33,13 @@
                 <h2>常见问题</h2>
                 
                 <div class="faq-item">
-                    <h3>❓ 如何开始使用剪贴板助手？</h3>
-                    <p>首次启动应用后，系统会提示您授予辅助功能权限。这是监控剪贴板所必需的。请前往"系统偏好设置" > "安全性与隐私" > "隐私" > "辅助功能"，并勾选剪贴板助手。</p>
+                    <h3>❓ 如何开始使用Clipboard Safe？</h3>
+                    <p>首次启动应用后，系统会提示您授予辅助功能权限。这是监控剪贴板所必需的。请前往"系统偏好设置" > "安全性与隐私" > "隐私" > "辅助功能"，并勾选Clipboard Safe。</p>
                 </div>
 
                 <div class="faq-item">
                     <h3>❓ 为什么需要辅助功能权限？</h3>
-                    <p>剪贴板助手需要辅助功能权限来监控您的复制操作（Command+C），以便自动保存剪贴板内容。这是应用核心功能所必需的权限。请放心，我们不会收集或上传任何数据，所有内容仅保存在您的 Mac 本地。</p>
+                    <p>Clipboard Safe需要辅助功能权限来监控您的复制操作（Command+C+C或Command+C），以便自动保存剪贴板内容。这是应用核心功能所必需的权限。请放心，我们不会收集或上传任何数据，所有内容仅保存在您的 Mac 本地。</p>
                 </div>
 
                 <div class="faq-item">
@@ -63,7 +63,7 @@
 
                 <div class="faq-item">
                     <h3>❓ 我的数据安全吗？</h3>
-                    <p>绝对安全！剪贴板助手：</p>
+                    <p>绝对安全！Clipboard Safe：</p>
                     <ul>
                         <li>所有数据仅保存在您的 Mac 本地</li>
                         <li>不需要网络连接，完全离线运行</li>
@@ -82,7 +82,7 @@
                 <h2>系统要求</h2>
                 <div class="requirements">
                     <ul>
-                        <li><strong>操作系统：</strong>macOS 11.0 或更高版本</li>
+                        <li><strong>操作系统：</strong>macOS 14.0 或更高版本</li>
                         <li><strong>架构支持：</strong>支持 Intel 和 Apple Silicon (M1/M2/M3) 芯片</li>
                         <li><strong>权限要求：</strong>辅助功能权限</li>
                         <li><strong>磁盘空间：</strong>最少 10 MB</li>
@@ -120,7 +120,7 @@
                     <h3>🔧 应用无法启动</h3>
                     <p><strong>解决方案：</strong></p>
                     <ol>
-                        <li>确保您的 macOS 版本符合系统要求（11.0 或更高）</li>
+                        <li>确保您的 macOS 版本符合系统要求（14.0 或更高）</li>
                         <li>尝试重启 Mac</li>
                         <li>重新下载并安装应用</li>
                     </ol>
@@ -132,7 +132,7 @@
                     <ol>
                         <li>检查是否已授予辅助功能权限</li>
                         <li>前往"系统偏好设置" > "安全性与隐私" > "隐私" > "辅助功能"</li>
-                        <li>确保剪贴板助手已勾选并启用</li>
+                        <li>确保Clipboard Safe已勾选并启用</li>
                         <li>如已勾选，尝试取消勾选后重新勾选</li>
                     </ol>
                 </div>
@@ -173,7 +173,7 @@
                     <a href="support.html">技术支持</a>
                     <a href="privacy.html">隐私政策</a>
                 </div>
-                <p class="footer-copyright">© 2024 剪贴板助手. 保留所有权利.</p>
+                <p class="footer-copyright">© 2025 Clipboard Safe. 保留所有权利.</p>
             </div>
         </div>
     </footer>
