--- a/privacy.html
+++ b/privacy.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 - 剪贴板助手</title>
+    <title>隐私政策 - Clipboard Safe</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1>📋 剪贴板助手</h1>
+                <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
                 <li><a href="index.html">首页</a></li>
@@ -23,7 +23,7 @@
     <header class="page-header">
         <div class="container">
             <h1>隐私政策</h1>
-            <p class="update-date">最后更新日期：2024年12月17日</p>
+            <p class="update-date">最后更新日期：2025年12月18日</p>
         </div>
     </header>
 
@@ -33,7 +33,7 @@
                 
                 <div class="policy-section">
                     <h2>1. 引言</h2>
-                    <p>欢迎使用剪贴板助手（以下简称"本应用"、"我们"）。我们非常重视您的隐私和数据安全。本隐私政策详细说明了本应用如何处理您的信息，以及我们为保护您的隐私所采取的措施。</p>
+                    <p>欢迎使用Clipboard Safe（以下简称"本应用"、"我们"）。我们非常重视您的隐私和数据安全。本隐私政策详细说明了本应用如何处理您的信息，以及我们为保护您的隐私所采取的措施。</p>
                     <p>使用本应用即表示您同意本隐私政策的条款。如果您不同意本政策，请不要使用本应用。</p>
                 </div>
 
@@ -208,7 +208,7 @@
                     <a href="support.html">技术支持</a>
                     <a href="privacy.html">隐私政策</a>
                 </div>
-                <p class="footer-copyright">© 2024 剪贴板助手. 保留所有权利.</p>
+                <p class="footer-copyright">© 2025 Clipboard Safe. 保留所有权利.</p>
             </div>
         </div>
     </footer>
