--- a/support.html
+++ b/support.html
@@ -47,7 +47,7 @@
                     <p>在应用设置中，您可以选择：</p>
                     <ul>
                         <li><strong>Command+C 自动保存：</strong>每次复制都会自动保存到历史记录</li>
-                        <li><strong>Command+C+C 主动保存：</strong>需要快速按两次 Command+C 才会保存</li>
+                        <li><strong>Command+C+C 主动保存：</strong>按 Command + C 复制键后，还需要按一次 C 才会保存</li>
                     </ul>
                 </div>
 
@@ -98,7 +98,7 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-details">
                             <h3>电子邮件</h3>
-                            <p>发送邮件至：support@example.com</p>
+                            <p>发送邮件至：smilejie2020@foxmail.com</p>
                             <p class="response-time" style="margin-top: 0.5rem; font-size: 0.875rem;">请更新为您的实际联系邮箱</p>
                         </div>
                     </div>
