--- a/privacy.html
+++ b/privacy.html
@@ -188,13 +188,13 @@
                     <h2 data-i18n="privacy_section15_title">15. Privacy Policy Summary</h2>
                     <p class="summary-intro" data-i18n="privacy_section15_intro"><strong>In short, this app's commitment to your privacy is:</strong></p>
                     <ul class="summary-list">
-                        <li data-i18n="privacy_section15_item1">✅ <strong>Zero Data Collection:</strong> We do not collect any user data</li>
-                        <li data-i18n="privacy_section15_item2">✅ <strong>Completely Local:</strong> All data is saved only on your Mac</li>
-                        <li data-i18n="privacy_section15_item3">✅ <strong>Completely Offline:</strong> The app does not require a network connection and does not communicate with any servers</li>
-                        <li data-i18n="privacy_section15_item4">✅ <strong>No Data Sharing:</strong> Does not share data with any third parties</li>
-                        <li data-i18n="privacy_section15_item5">✅ <strong>Local Encryption:</strong> Local data is encrypted for protection</li>
-                        <li data-i18n="privacy_section15_item6">✅ <strong>You Have Control:</strong> You can view and delete your data at any time</li>
-                        <li data-i18n="privacy_section15_item7">✅ <strong>Transparent Permission Use:</strong> Accessibility permission is only used for paste functionality, requested on-demand, not used for other purposes</li>
+                        <li data-i18n="privacy_section15_item1">✔ <strong>Zero Data Collection:</strong> We do not collect any user data</li>
+                        <li data-i18n="privacy_section15_item2">✔ <strong>Completely Local:</strong> All data is saved only on your Mac</li>
+                        <li data-i18n="privacy_section15_item3">✔ <strong>Completely Offline:</strong> The app does not require a network connection and does not communicate with any servers</li>
+                        <li data-i18n="privacy_section15_item4">✔ <strong>No Data Sharing:</strong> Does not share data with any third parties</li>
+                        <li data-i18n="privacy_section15_item5">✔ <strong>Local Encryption:</strong> Local data is encrypted for protection</li>
+                        <li data-i18n="privacy_section15_item6">✔ <strong>You Have Control:</strong> You can view and delete your data at any time</li>
+                        <li data-i18n="privacy_section15_item7">✔ <strong>Transparent Permission Use:</strong> Accessibility permission is only used for paste functionality, requested on-demand, not used for other purposes</li>
                     </ul>
                     <p class="summary-note" data-i18n="privacy_section15_note"><strong>Your privacy is our top priority.</strong> We have prioritized privacy protection from the very beginning, ensuring that your clipboard content never leaves your device.</p>
                 </div>
