--- a/support.html
+++ b/support.html
@@ -44,15 +44,6 @@
                 </div>
 
                 <div class="faq-item">
-                    <h3 data-i18n="faq3_question">❓ How do I switch save modes?</h3>
-                    <p data-i18n="faq3_answer">In the app settings, you can choose:</p>
-                    <ul>
-                        <li data-i18n="faq3_mode1"><strong>Command+C automatic save:</strong> Every copy is automatically saved to history</li>
-                        <li data-i18n="faq3_mode2"><strong>Command+C+C manual save:</strong> After pressing Command + C to copy, press C one more time to save</li>
-                    </ul>
-                </div>
-
-                <div class="faq-item">
                     <h3 data-i18n="faq4_question">❓ How do I search history?</h3>
                     <p data-i18n="faq4_answer">Click the app icon to open the history panel, then enter keywords in the search box for quick lookup. Supports full-text search to help you quickly find what you need.</p>
                 </div>
@@ -75,7 +66,7 @@
 
                 <div class="faq-item">
                     <h3 data-i18n="faq7_question">❓ How do I uninstall the app?</h3>
-                    <p data-i18n="faq7_answer">Drag the app from the "Applications" folder to the Trash. All local data will be deleted with the app.</p>
+                    <p data-i18n="faq7_answer">Drag the app from the "Applications" folder to the Trash.</p>
                 </div>
             </div>
 
