feat: core feature content change

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 
                 <div class="feature-card">
                     <div class="feature-icon">⌨️</div>
-                    <h3 data-i18n="feature3_title">Multiple Copy Trigger Modes</h3>
-                    <p data-i18n="feature3_desc1">Support Command+C automatic save</p>
-                    <p data-i18n="feature3_desc2">Or use Command+C+C for manual save</p>
-                    <p data-i18n="feature3_desc3">Meet different user habits</p>
+                    <h3 data-i18n="feature3_title">Quick Access</h3> 
+                    <p data-i18n="feature3_desc1">Default shortcut Command+V to open clipboard panel</p>
+                    <p data-i18n="feature3_desc2">One-click paste to any application</p>
+                    <p data-i18n="feature3_desc3">Customizable shortcut to fit your workflow</p>
                 </div>
 
                 <div class="feature-card">
