feat: content change

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="feature-card">
                     <div class="feature-icon">⌨️</div>
                     <h3 data-i18n="feature3_title">Quick Access</h3> 
-                    <p data-i18n="feature3_desc1">Default shortcut Command+V to open clipboard panel</p>
-                    <p data-i18n="feature3_desc2">One-click paste to any application</p>
+                    <p data-i18n="feature3_desc1">Default shortcut Option+V to open clipboard panel</p>
+                    <p data-i18n="feature3_desc2">One-click Copy and you can paste to any application</p>
                     <p data-i18n="feature3_desc3">Customizable shortcut to fit your workflow</p>
                 </div>
 
