--- a/support.html
+++ b/support.html
@@ -38,10 +38,10 @@
                     <p data-i18n="faq1_answer">Simply launch the app and start copying! Clipboard Safe will automatically save your copied content. No special permissions are needed for reading clipboard content. Accessibility permission is only requested when you try to paste content from the app.</p>
                 </div>
 
-                <div class="faq-item">
+                <!-- <div class="faq-item">
                     <h3 data-i18n="faq2_question">❓ Why do I need Accessibility permissions?</h3>
                     <p data-i18n="faq2_answer">Accessibility permission is only needed for pasting clipboard content to other apps. When you click on clipboard history to paste, the app writes the content to the system clipboard and simulates Command+V to paste it into the foreground app. This permission is requested on-demand when you try to paste. The app does not use accessibility to monitor keyboard events like Command+C.</p>
-                </div>
+                </div> -->
 
                 <div class="faq-item">
                     <h3 data-i18n="faq4_question">❓ How do I search history?</h3>
