feat: privacy policy update

--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
     <header class="page-header">
         <div class="container">
             <h1 data-i18n="page_header_privacy">Privacy Policy</h1>
-            <p class="update-date" data-i18n="privacy_update_date">Last updated: January 9, 2026</p>
+            <p class="update-date" data-i18n="privacy_update_date">Last updated: January 13, 2026</p>
         </div>
     </header>
 
@@ -62,7 +62,7 @@
 
                 <div class="policy-section">
                     <h2 data-i18n="privacy_section3_title">3. Permission Explanation</h2>
-                    <h3 data-i18n="privacy_section3_1_title">3.1 Accessibility Permission</h3>
+                    <!-- <h3 data-i18n="privacy_section3_1_title">3.1 Accessibility Permission</h3>
                     <p data-i18n="privacy_section3_1_p1">This app requires macOS Accessibility permission for specific functions. This permission is used for:</p>
                     <ul>
                         <li data-i18n="privacy_section3_1_item1"><strong>Pasting Clipboard Content:</strong> When you click on clipboard history content and want to paste it into the foreground app, this app needs to simulate Command+V keyboard events to implement paste functionality. This is because the clipboard cannot directly "inject" content into other apps; it can only make the foreground app respond to paste operations by simulating keyboard events</li>
@@ -75,9 +75,9 @@
                         <li data-i18n="privacy_section3_1_item5">Accessibility permission is only used to implement paste functionality and will not be used to monitor other apps or collect any other information</li>
                         <li data-i18n="privacy_section3_1_item6">All data obtained through this permission is only processed and stored locally and will not be transmitted anywhere</li>
                         <li data-i18n="privacy_section3_1_item7">You can revoke this permission at any time in "System Preferences" > "Security & Privacy" > "Privacy" > "Accessibility". After revocation, paste functionality will be unavailable, but you can still view clipboard history</li>
-                    </ul>
+                    </ul> -->
 
-                    <h3 data-i18n="privacy_section3_2_title">3.2 No Network Connection Required</h3>
+                    <h3 data-i18n="privacy_section3_2_title">3.1 No Network Connection Required</h3>
                     <p data-i18n="privacy_section3_2_p1">This app runs completely offline and does not require an internet connection. The app will not:</p>
                     <ul>
                         <li data-i18n="privacy_section3_2_item1">Send data to any server</li>
@@ -149,7 +149,7 @@
                         <li data-i18n="privacy_section10_item1"><strong>Right of Access:</strong> You can view all saved clipboard history at any time</li>
                         <li data-i18n="privacy_section10_item2"><strong>Right to Modify:</strong> Although the app is primarily for viewing history, you can delete unwanted content</li>
                         <li data-i18n="privacy_section10_item3"><strong>Right to Delete:</strong> You can delete some or all history at any time</li>
-                        <li data-i18n="privacy_section10_item4"><strong>Right to Control:</strong> You can revoke the app's Accessibility permission through system settings. After revocation, paste functionality will be unavailable, but you can still view clipboard history</li>
+                        <!-- <li data-i18n="privacy_section10_item4"><strong>Right to Control:</strong> You can revoke the app's Accessibility permission through system settings. After revocation, paste functionality will be unavailable, but you can still view clipboard history</li> -->
                     </ul>
                 </div>
 
@@ -194,7 +194,7 @@
                         <li data-i18n="privacy_section15_item4">✔ <strong>No Data Sharing:</strong> Does not share data with any third parties</li>
                         <li data-i18n="privacy_section15_item5">✔ <strong>Local Encryption:</strong> Local data is encrypted for protection</li>
                         <li data-i18n="privacy_section15_item6">✔ <strong>You Have Control:</strong> You can view and delete your data at any time</li>
-                        <li data-i18n="privacy_section15_item7">✔ <strong>Transparent Permission Use:</strong> Accessibility permission is only used for paste functionality, requested on-demand, not used for other purposes</li>
+                        <!-- <li data-i18n="privacy_section15_item7">✔ <strong>Transparent Permission Use:</strong> Accessibility permission is only used for paste functionality, requested on-demand, not used for other purposes</li> -->
                     </ul>
                     <p class="summary-note" data-i18n="privacy_section15_note"><strong>Your privacy is our top priority.</strong> We have prioritized privacy protection from the very beginning, ensuring that your clipboard content never leaves your device.</p>
                 </div>
