feat: appstore download button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 <p class="hero-subtitle" data-i18n="hero_subtitle">Intelligent Clipboard Manager for Mac</p>
                 <p class="hero-description" data-i18n="hero_description">Make your copy-paste workflow more efficient and convenient</p>
                 <div class="hero-buttons">
+                    <a class="appstore-badge" href="https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12" target="_blank" rel="noopener noreferrer" aria-label="Download on the Mac App Store">
+                        <img class="appstore-badge__img appstore-badge__img--en" src="statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
+                        <img class="appstore-badge__img appstore-badge__img--zh" src="statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
+                    </a>
                     <a href="#features" class="btn btn-primary" data-i18n="btn_learn_more">Learn More</a>
                     <a href="support.html" class="btn btn-secondary" data-i18n="btn_get_support">Get Support</a>
                 </div>
@@ -109,6 +113,10 @@
             <h2 data-i18n="cta_title">Ready to Boost Your Productivity?</h2>
             <p data-i18n="cta_description">Download Clipboard Safe from the Mac App Store and start your efficient workflow</p>
             <div class="cta-buttons">
+                <a class="appstore-badge" href="https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12" target="_blank" rel="noopener noreferrer" aria-label="Download on the Mac App Store">
+                    <img class="appstore-badge__img appstore-badge__img--en" src="statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
+                    <img class="appstore-badge__img appstore-badge__img--zh" src="statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
+                </a>
                 <a href="support.html" class="btn btn-primary" data-i18n="btn_get_tech_support">Get Technical Support</a>
                 <a href="privacy.html" class="btn btn-secondary" data-i18n="btn_learn_privacy">Learn About Privacy Policy</a>
             </div>
