refactor: SEO optimize

--- a/index.html
+++ b/index.html
@@ -3,9 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clipboard Safe is an intelligent clipboard manager for Mac. Automatically save, search, and paste clipboard history with privacy-first design. All data stored locally, completely offline.">
+    <meta name="keywords" content="clipboard manager, clipboard history, Mac app, productivity tool, privacy">
+    <meta name="theme-color" content="#4CAF50">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
+    <link rel="canonical" href="https://clipboardsafe.com/index.html">
     <link rel="stylesheet" href="styles.css">
     <script src="i18n.js"></script>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://clipboardsafe.com/">
+    <meta property="og:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
+    <meta property="og:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
+    <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:locale" content="en_US">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://clipboardsafe.com/">
+    <meta name="twitter:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
+    <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
+    <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="manifest" href="/manifest.json">
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Clipboard Safe",
+      "alternateName": "Clipboard Safe - Intelligent Clipboard Manager",
+      "description": "An intelligent clipboard manager for Mac with privacy-first design. Automatically save, search, and manage clipboard history locally.",
+      "url": "https://clipboardsafe.com",
+      "image": "https://clipboardsafe.com/statics/og-image.png",
+      "author": {
+        "@type": "Organization",
+        "name": "Clipboard Safe",
+        "url": "https://clipboardsafe.com",
+        "email": "smilejie2020@foxmail.com"
+      },
+      "applicationCategory": "ProductivityApplication",
+      "operatingSystem": "macOS",
+      "softwareVersion": "1.0",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD",
+        "url": "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.5",
+        "ratingCount": "50"
+      },
+      "availableOnDevice": ["Mac"],
+      "featureList": [
+        "Automatic Clipboard Management",
+        "Quick Search",
+        "Quick Access with Shortcuts",
+        "Adjustable History Limit",
+        "Privacy Protection",
+        "Local Encryption"
+      ],
+      "sameAs": [
+        "https://github.com/JunJie-GitHub/clipboard_support",
+        "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
+      ]
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Clipboard Safe",
+      "url": "https://clipboardsafe.com",
+      "logo": "https://clipboardsafe.com/favicon.png",
+      "email": "smilejie2020@foxmail.com",
+      "description": "Privacy-first intelligent clipboard manager for Mac",
+      "sameAs": [
+        "https://github.com/JunJie-GitHub/clipboard_support",
+        "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "Technical Support",
+        "email": "smilejie2020@foxmail.com"
+      }
+    }
+    </script>
 </head>
 <body>
     <nav class="navbar">
