--- a/privacy.html
+++ b/privacy.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Clipboard Safe Privacy Policy. Learn how we protect your data with zero data collection, local storage only, and complete offline operation. Your privacy is our priority.">
+    <meta name="theme-color" content="#4CAF50">
+    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_privacy">Privacy Policy - Clipboard Safe</title>
+    <link rel="canonical" href="https://clipboardsafe.com/privacy.html">
     <link rel="stylesheet" href="styles.css">
     <script src="i18n.js"></script>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://clipboardsafe.com/privacy.html">
+    <meta property="og:title" content="Privacy Policy - Clipboard Safe">
+    <meta property="og:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
+    <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://clipboardsafe.com/privacy.html">
+    <meta name="twitter:title" content="Privacy Policy - Clipboard Safe">
+    <meta name="twitter:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
     <nav class="navbar">
