feat: 中英文切换使用不同路径

--- a/zh/index.html
+++ b/zh/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Clipboard Safe is an intelligent clipboard manager for Mac. Automatically save, search, and paste clipboard history with privacy-first design. All data stored locally, completely offline.">
-    <meta name="keywords" content="clipboard manager, clipboard history, Mac app, productivity tool, privacy">
+    <meta name="description" content="Clipboard Safe 是为 Mac 打造的智能剪贴板管理工具。自动保存、搜索和粘贴剪贴板历史，采用隐私第一的设计。所有数据仅本地存储，完全离线运行。">
+    <meta name="keywords" content="剪贴板管理器, 剪贴板历史, Mac 应用, 效率工具, 隐私">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
-    <link rel="canonical" href="https://clipboardsafe.com/index.html">
-    <link rel="stylesheet" href="styles.css">
-    <script src="i18n.js"></script>
+    <title data-i18n="page_title_home">Clipboard Safe - 智能剪贴板管理工具</title>
+    <link rel="canonical" href="https://clipboardsafe.com/zh/">
+    <link rel="stylesheet" href="../styles.css">
+    <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://clipboardsafe.com/">
-    <meta property="og:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
-    <meta property="og:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
+    <meta property="og:url" content="https://clipboardsafe.com/zh/">
+    <meta property="og:title" content="Clipboard Safe - 为 Mac 打造的智能剪贴板管理工具">
+    <meta property="og:description" content="智能剪贴板管理工具，采用隐私第一的设计。自动跟踪历史记录、快速搜索和安全的本地存储。">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
-    <meta property="og:locale" content="en_US">
+    <meta property="og:locale" content="zh_CN">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://clipboardsafe.com/">
-    <meta name="twitter:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
-    <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
+    <meta name="twitter:url" content="https://clipboardsafe.com/zh/">
+    <meta name="twitter:title" content="Clipboard Safe - 为 Mac 打造的智能剪贴板管理工具">
+    <meta name="twitter:description" content="智能剪贴板管理工具，采用隐私第一的设计。自动跟踪历史记录、快速搜索和安全的本地存储。">
     <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -34,8 +34,8 @@
       "@context": "https://schema.org",
       "@type": "SoftwareApplication",
       "name": "Clipboard Safe",
-      "alternateName": "Clipboard Safe - Intelligent Clipboard Manager",
-      "description": "An intelligent clipboard manager for Mac with privacy-first design. Automatically save, search, and manage clipboard history locally.",
+      "alternateName": "为 Mac 打造的智能剪贴板管理工具",
+      "description": "为 Mac 打造的智能剪贴板管理工具，采用隐私第一的设计。自动保存、搜索和管理剪贴板历史记录。",
       "url": "https://clipboardsafe.com",
       "image": "https://clipboardsafe.com/statics/og-image.png",
       "author": {
@@ -60,12 +60,12 @@
       },
       "availableOnDevice": ["Mac"],
       "featureList": [
-        "Automatic Clipboard Management",
-        "Quick Search",
-        "Quick Access with Shortcuts",
-        "Adjustable History Limit",
-        "Privacy Protection",
-        "Local Encryption"
+        "自动剪贴板管理",
+        "快速搜索",
+        "快捷键快速访问",
+        "可调整历史记录限制",
+        "隐私保护",
+        "本地加密"
       ],
       "sameAs": [
         "https://github.com/JunJie-GitHub/clipboard_support",
@@ -81,14 +81,14 @@
       "url": "https://clipboardsafe.com",
       "logo": "https://clipboardsafe.com/favicon.png",
       "email": "smilejie2020@foxmail.com",
-      "description": "Privacy-first intelligent clipboard manager for Mac",
+      "description": "隐私第一的 Mac 剪贴板管理工具",
       "sameAs": [
         "https://github.com/JunJie-GitHub/clipboard_support",
         "https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12"
       ],
       "contactPoint": {
         "@type": "ContactPoint",
-        "contactType": "Technical Support",
+        "contactType": "技术支持",
         "email": "smilejie2020@foxmail.com"
       }
     }
@@ -117,8 +117,8 @@
                 <p class="hero-description" data-i18n="hero_description">Make your copy-paste workflow more efficient and convenient</p>
                 <div class="hero-buttons">
                     <a class="appstore-badge" href="https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12" target="_blank" rel="noopener noreferrer" aria-label="Download on the Mac App Store">
-                        <img class="appstore-badge__img appstore-badge__img--en" src="statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
-                        <img class="appstore-badge__img appstore-badge__img--zh" src="statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
+                        <img class="appstore-badge__img appstore-badge__img--en" src="../statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
+                        <img class="appstore-badge__img appstore-badge__img--zh" src="../statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
                     </a>
                     <a href="#features" class="btn btn-primary" data-i18n="btn_learn_more">Learn More</a>
                     <a href="support.html" class="btn btn-secondary" data-i18n="btn_get_support">Get Support</a>
@@ -202,8 +202,8 @@
             <p data-i18n="cta_description">Download Clipboard Safe from the Mac App Store and start your efficient workflow</p>
             <div class="cta-buttons">
                 <a class="appstore-badge" href="https://apps.apple.com/cn/app/clipboard-safe/id6755882347?mt=12" target="_blank" rel="noopener noreferrer" aria-label="Download on the Mac App Store">
-                    <img class="appstore-badge__img appstore-badge__img--en" src="statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
-                    <img class="appstore-badge__img appstore-badge__img--zh" src="statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
+                    <img class="appstore-badge__img appstore-badge__img--en" src="../statics/appstore_logo_black_us.svg" alt="Download on the App Store" loading="lazy">
+                    <img class="appstore-badge__img appstore-badge__img--zh" src="../statics/appstore_logo_black_cn.svg" alt="在 App Store 下载" loading="lazy">
                 </a>
                 <a href="support.html" class="btn btn-primary" data-i18n="btn_get_tech_support">Get Technical Support</a>
                 <a href="privacy.html" class="btn btn-secondary" data-i18n="btn_learn_privacy">Learn About Privacy Policy</a>
