--- a/zh/support.html
+++ b/zh/support.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://clipboardsafe.com/support.html">
+    <meta name="twitter:url" content="https://clipboardsafe.com/zh/support.html">
     <meta name="twitter:title" content="Technical Support - Clipboard Safe">
     <meta name="twitter:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
     <!-- Favicon -->
