--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <li><a href="index.html" class="active" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
+                <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
             </ul>
             <div class="language-switcher"></div>
         </div>
@@ -218,6 +219,7 @@
                     <a href="index.html" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
+                    <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
                 </div>
                 <p class="footer-copyright" data-i18n="footer_copyright">© 2026 Clipboard Safe. All rights reserved.</p>
             </div>
