chore： baidu verify

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="clipboard manager, clipboard history, Mac app, productivity tool, privacy">
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+    <meta name="baidu-site-verification" content="codeva-0TQPcjdusu" />
     <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
     <link rel="canonical" href="https://clipboardsafe.com/index.html">
     <link rel="stylesheet" href="styles.css">
