--- a/changelog.html
+++ b/changelog.html
@@ -15,8 +15,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://clipboardsafe.com/changelog.html">
     <meta property="og:title" content="Clipboard Safe - Changelog">
+    <meta property="og:site_name" content="Clipboard Safe">
     <meta property="og:description" content="View the latest updates and improvements for Clipboard Safe.">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:locale" content="en_US">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -33,6 +36,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
