--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="baidu-site-verification" content="codeva-0TQPcjdusu" />
     <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
-    <link rel="canonical" href="https://clipboardsafe.com/index.html">
+    <link rel="canonical" href="https://clipboardsafe.com/">
     <link rel="stylesheet" href="styles.css">
     <script src="i18n.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://clipboardsafe.com/">
     <meta property="og:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
+    <meta property="og:site_name" content="Clipboard Safe">
     <meta property="og:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:locale" content="en_US">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://clipboardsafe.com/">
     <meta name="twitter:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
     <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
-    <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png"
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -80,7 +83,13 @@
       "@type": "Organization",
       "name": "Clipboard Safe",
       "url": "https://clipboardsafe.com",
-      "logo": "https://clipboardsafe.com/favicon.png",
+      "logo": {
+        "@type": "ImageObject",
+        "url": "https://clipboardsafe.com/statics/og-image.png",
+        "width": 1200,
+        "height": 630
+      },
+      "image": "https://clipboardsafe.com/statics/og-image.png",
       "email": "smilejie2020@foxmail.com",
       "description": "Privacy-first intelligent clipboard manager for Mac",
       "sameAs": [
@@ -99,6 +108,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
