--- a/privacy.html
+++ b/privacy.html
@@ -12,10 +12,13 @@
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://clipboardsafe.com/zh/privacy.html">
+    <meta property="og:url" content="https://clipboardsafe.com/privacy.html">
     <meta property="og:title" content="Privacy Policy - Clipboard Safe">
+    <meta property="og:site_name" content="Clipboard Safe">
     <meta property="og:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://clipboardsafe.com/privacy.html">
@@ -30,6 +33,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
