--- a/support.html
+++ b/support.html
@@ -7,15 +7,18 @@
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_support">Technical Support - Clipboard Safe</title>
-    <link rel="canonical" href="https://clipboardsafe.com/zh/support.html">
+    <link rel="canonical" href="https://clipboardsafe.com/support.html">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://clipboardsafe.com/zh/support.html">
+    <meta property="og:url" content="https://clipboardsafe.com/support.html">
     <meta property="og:title" content="Technical Support - Clipboard Safe">
+    <meta property="og:site_name" content="Clipboard Safe">
     <meta property="og:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://clipboardsafe.com/support.html">
@@ -30,6 +33,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
