--- a/zh/index.html
+++ b/zh/index.html
@@ -15,8 +15,11 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://clipboardsafe.com/zh/">
     <meta property="og:title" content="Clipboard Safe - 为 Mac 打造的智能剪贴板管理工具">
+    <meta property="og:site_name" content="Clipboard Safe">
     <meta property="og:description" content="智能剪贴板管理工具，采用隐私第一的设计。自动跟踪历史记录、快速搜索和安全的本地存储。">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:locale" content="zh_CN">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
@@ -98,6 +101,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
