--- a/zh/privacy.html
+++ b/zh/privacy.html
@@ -13,9 +13,12 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://clipboardsafe.com/zh/privacy.html">
-    <meta property="og:title" content="Privacy Policy - Clipboard Safe">
-    <meta property="og:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
+    <meta property="og:title" content="隐私政策 - Clipboard Safe">
+    <meta property="og:site_name" content="Clipboard Safe">
+    <meta property="og:description" content="了解我们对隐私的承诺。零数据收集，仅本地存储，加密数据保护。">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://clipboardsafe.com/privacy.html">
@@ -30,6 +33,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
