--- a/zh/support.html
+++ b/zh/support.html
@@ -13,9 +13,12 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://clipboardsafe.com/zh/support.html">
-    <meta property="og:title" content="Technical Support - Clipboard Safe">
-    <meta property="og:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
+    <meta property="og:title" content="技术支持 - Clipboard Safe">
+    <meta property="og:site_name" content="Clipboard Safe">
+    <meta property="og:description" content="Clipboard Safe技术支持。常见问题、故障排除指南和客户支持。">
     <meta property="og:image" content="https://clipboardsafe.com/statics/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://clipboardsafe.com/zh/support.html">
@@ -30,6 +33,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <img src="/apple-touch-icon.png" alt="Clipboard Safe Logo">
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
