--- a/zh/index.html
+++ b/zh/index.html
@@ -9,6 +9,9 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_home">Clipboard Safe - 智能剪贴板管理工具</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/">
+    <link rel="alternate" hreflang="x-default" href="https://clipboardsafe.com/">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -105,7 +108,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="active" data-i18n="nav_home">Home</a></li>
+                <li><a href="/zh/" class="active" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -220,7 +223,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/zh/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
