--- a/zh/support.html
+++ b/zh/support.html
@@ -8,6 +8,8 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_support">Technical Support - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/support.html">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/support.html">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/support.html">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -22,8 +24,8 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://clipboardsafe.com/zh/support.html">
-    <meta name="twitter:title" content="Technical Support - Clipboard Safe">
-    <meta name="twitter:description" content="Get help with Clipboard Safe. FAQs, troubleshooting guides, and customer support.">
+    <meta name="twitter:title" content="技术支持 - Clipboard Safe">
+    <meta name="twitter:description" content="Clipboard Safe 技术支持：常见问题、故障排除指南与联系方式。">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -37,7 +39,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" data-i18n="nav_home">Home</a></li>
+                <li><a href="/zh/" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" class="active" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -172,7 +174,7 @@
                 <h2 data-i18n="support_more_help_title">Need More Help?</h2>
                 <p data-i18n="more_help_intro">Visit our other resources:</p>
                 <div class="help-links">
-                    <a href="index.html" class="help-link">
+                    <a href="/zh/" class="help-link">
                         <span>🏠</span>
                         <span data-i18n="help_link_home">Return Home</span>
                     </a>
@@ -189,7 +191,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/zh/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
