--- a/changelog.html
+++ b/changelog.html
@@ -9,6 +9,8 @@
     <meta name="robots" content="index, follow">
     <title data-i18n="page_title_changelog">Changelog - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/changelog.html">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/changelog.html">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/changelog.html">
     <link rel="stylesheet" href="styles.css">
     <script src="i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -40,7 +42,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" data-i18n="nav_home">Home</a></li>
+                <li><a href="/" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" class="active" data-i18n="nav_changelog">Changelog</a></li>
@@ -158,7 +160,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
