--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="baidu-site-verification" content="codeva-0TQPcjdusu" />
     <title data-i18n="page_title_home">Clipboard Safe - Intelligent Clipboard Manager</title>
     <link rel="canonical" href="https://clipboardsafe.com/">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/">
+    <link rel="alternate" hreflang="x-default" href="https://clipboardsafe.com/">
     <link rel="stylesheet" href="styles.css">
     <script src="i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -27,7 +30,7 @@
     <meta name="twitter:url" content="https://clipboardsafe.com/">
     <meta name="twitter:title" content="Clipboard Safe - Intelligent Clipboard Manager for Mac">
     <meta name="twitter:description" content="Smart clipboard manager with privacy-first design. Automatic history tracking, quick search, and secure local storage.">
-    <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png"
+    <meta name="twitter:image" content="https://clipboardsafe.com/statics/og-image.png">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -112,7 +115,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" class="active" data-i18n="nav_home">Home</a></li>
+                <li><a href="/" class="active" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -227,7 +230,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
