--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#4CAF50">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_privacy">Privacy Policy - Clipboard Safe</title>
-    <link rel="canonical" href="https://clipboardsafe.com/zh/privacy.html">
+    <link rel="canonical" href="https://clipboardsafe.com/privacy.html">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/privacy.html">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/privacy.html">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -37,7 +39,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" data-i18n="nav_home">Home</a></li>
+                <li><a href="/" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" class="active" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -232,7 +234,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
