--- a/support.html
+++ b/support.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,8 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_support">Technical Support - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/support.html">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/support.html">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/support.html">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -37,7 +39,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" data-i18n="nav_home">Home</a></li>
+                <li><a href="/" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" class="active" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -172,7 +174,7 @@
                 <h2 data-i18n="support_more_help_title">Need More Help?</h2>
                 <p data-i18n="more_help_intro">Visit our other resources:</p>
                 <div class="help-links">
-                    <a href="index.html" class="help-link">
+                    <a href="/" class="help-link">
                         <span>🏠</span>
                         <span data-i18n="help_link_home">Return Home</span>
                     </a>
@@ -189,7 +191,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
