--- a/zh/privacy.html
+++ b/zh/privacy.html
@@ -8,6 +8,8 @@
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <title data-i18n="page_title_privacy">Privacy Policy - Clipboard Safe</title>
     <link rel="canonical" href="https://clipboardsafe.com/zh/privacy.html">
+    <link rel="alternate" hreflang="en" href="https://clipboardsafe.com/privacy.html">
+    <link rel="alternate" hreflang="zh" href="https://clipboardsafe.com/zh/privacy.html">
     <link rel="stylesheet" href="../styles.css">
     <script src="../i18n.js"></script>
     <!-- Open Graph / Facebook -->
@@ -21,9 +23,9 @@
     <meta property="og:image:height" content="630">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="https://clipboardsafe.com/privacy.html">
-    <meta name="twitter:title" content="Privacy Policy - Clipboard Safe">
-    <meta name="twitter:description" content="Understand our commitment to privacy. Zero data collection, local storage only, encrypted data protection.">
+    <meta name="twitter:url" content="https://clipboardsafe.com/zh/privacy.html">
+    <meta name="twitter:title" content="隐私政策 - Clipboard Safe">
+    <meta name="twitter:description" content="了解我们对隐私的承诺：零数据收集，仅本地存储，加密保护。">
     <!-- Favicon -->
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" href="/favicon.png">
@@ -37,7 +39,7 @@
                 <h1>Clipboard Safe</h1>
             </div>
             <ul class="nav-menu">
-                <li><a href="index.html" data-i18n="nav_home">Home</a></li>
+                <li><a href="/zh/" data-i18n="nav_home">Home</a></li>
                 <li><a href="support.html" data-i18n="nav_support">Support</a></li>
                 <li><a href="privacy.html" class="active" data-i18n="nav_privacy">Privacy Policy</a></li>
                 <li><a href="changelog.html" data-i18n="nav_changelog">Changelog</a></li>
@@ -232,7 +234,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="index.html" data-i18n="nav_home">Home</a>
+                    <a href="/zh/" data-i18n="nav_home">Home</a>
                     <a href="support.html" data-i18n="nav_support">Support</a>
                     <a href="privacy.html" data-i18n="nav_privacy">Privacy Policy</a>
                     <a href="changelog.html" data-i18n="nav_changelog">Changelog</a>
